--- a/Pages/Rep_ItemCards.cshtml
+++ b/Pages/Rep_ItemCards.cshtml
@@ -121,6 +121,19 @@
                     <input type="text" name="ItemName" class="form-control" placeholder="@Model.lblItemName" value="@Model.ItemName">
                 </div>
             </div>
+               <div class="col col-lg-3">
+                <div class="input-group me-2 me-lg-3 fmxw-400">
+                    <span class="input-group-text">
+                        <svg class="icon icon-xs" x-description="Heroicon name: solid/search"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                    </span>
+                    <input type="text" name="StoreName" class="form-control" placeholder="@Model.lblStoreName" value="@Model.StoreName">
+                </div>
+            </div>
             <div class="col col-lg-3">
                 <div class="input-group me-2 me-lg-3 fmxw-400">
                     <span class="input-group-text">
@@ -145,12 +158,12 @@
 
                 </div>
             </div>
-            <div class="col-4 col-md-2  col-xl-1 ps-md-0 text-end">
+            <div class="col-4 col-md-2  col-xl-1    mt-2">
                 <button type="submit" name="action" value="search" class="btn btn-primary">@Model.lblSearch</button>
             </div>
 
 
-            <div class="col text-end position-relative">
+            <div class="col text-end position-relative mt-2">
                 <div class="position-relative">
                     <button class="btn btn-secondary btn-sm" id="toggleDropdown" type="button">
                         @Model.lblShowHideColumn
