--- a/Pages/ViewDispensedReport.cshtml
+++ b/Pages/ViewDispensedReport.cshtml
@@ -24,10 +24,14 @@
                 <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
                 <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
             </li>
-            <li class="breadcrumb-item d-flex align-items-center">
+            @* <li class="breadcrumb-item d-flex align-items-center">
                 <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
 
                 <a href="/Requests" class="text-decoration-none">@Model.lblRequests</a>
+            </li> *@
+            <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
+                <img src="images/expenses.png" alt="Home" width="16" height="16" class="me-2" />
+                <a href="/Disbursements" class="text-decoration-none">@Model.lblDisbursements</a>
             </li>
             <li class="breadcrumb-item d-flex align-items-center">
                 <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
